--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/Alpakash/the-powerpuff-girls-es6#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "set-value": ">=4.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
